Added all configurable options to the config file

--- a/ewalker.config
+++ b/ewalker.config
@@ -1,7 +1,15 @@
 [
  {ewalker, [
-    {folders, ["/tmp"]},
-    {hoptoad_apikey, "e7c0dd1688bffa3c53187758c693301c"}
+    {output, "/public/filelist.atom"},
+    {folders, [
+       "/public"
+       %, "/srv/dav"
+    ]},
+    {mappings, [
+       ["http://hostname/public", "/public"]
+       % ,{"http://hostname/dav/", "/srv/dav"} 
+    ]}
+    % ,{hoptoad_apikey, no_apikey_in_appfile}
   ]},
  {erlhoptoad, [
     {environment, "development"},
